Fix layout issue with chrome.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -176,6 +176,7 @@ div.post img {
 	float: right;
         padding-bottom: 0.5em;
         padding-left: 0.5em;
+        height: auto;
 }
 
 div.highlight {
